# cipher

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: API.md  ARCHITECTURE.md  DATABASE_SCHEMA.md  INSTALLATION.md
jarvis/: __init__.py  main.py
jarvis/android_bridge/: README.md
jarvis/backend/ai/: __init__.py  client.py  gemini_client.py  local_router.py  memory_extractor.py  prompts.py
jarvis/backend/api/: __init__.py  app.py  models.py
jarvis/backend/core/: config.py  logging.py
jarvis/backend/db/: database.py  repositories.py  schema.sql
jarvis/backend/services/: briefing.py  notifications.py
jarvis/backend/tools/: __init__.py  internet_tools.py  permissions.py  registry.py  system_tools.py
jarvis/backend/voice/: __init__.py  audio_io.py  pipeline.py  stt.py  tts.py  voice_auth.py  wake_word.py
jarvis/desktop/: __init__.py  app.py
scripts/: install_macos.sh  install_windows.ps1  register_startup_macos.sh  register_startup_windows.ps1  run_macos.sh  run_windows.ps1
tests/: test_gemini.py  test_memory.py  test_permissions.py  test_wake_word.py
