[project]
name = "jarvis-cipher-assistant"
version = "0.1.0"
description = "Desktop-first AI voice companion for Windows with wake word, memory, tools, and REST APIs."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "openai>=1.50.0",
  "PyQt6>=6.7.0",
  "httpx>=0.27.0",
  "feedparser>=6.0.11",
  "python-dotenv>=1.0.1",
  "pyttsx3>=2.90",
  "SpeechRecognition>=3.10.4",
  "pvporcupine>=3.0.0",
  "sounddevice>=0.5.0",
  "numpy>=1.26.0",
  "psutil>=6.0.0",
  "pytest>=8.3.0"
]

[project.scripts]
jarvis = "jarvis.main:main"

[tool.setuptools.packages.find]
include = ["jarvis*"]
exclude = ["work*", "outputs*", "tests*", "docs*", "scripts*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
